--- a/application.ui
+++ b/application.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Tic Tac Toe</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
